methods.picture.PatternPicture.scala.error
Compilation error:
PatternPicture:10: error: '=' expected but identifier found.
def make/(c:Color) {
        ^PatternPicture:15: error: illegal start of simple expression
def make(c:Color) {
^